# AgentMux

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agentmux-dev  changes.md  findings.md  logo.md  open_points.md  opencode.json  pipeline.py  pipeline_config.json  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt
.agentmux/: .active_session  .last_completion.json  config.yaml  copilot-provider-implementation-plan.md  mcp_servers.json
.claude/: settings.json
.cursor/: mcp.json
.qwen/: settings.json  settings.json.orig
agentmux/: agent_labels.py  application.py  config.py  console.py  event_bus.py  github.py  handlers.py  init.py  interruption_events.py  interruption_reports.py  interruption_sources.py  mcp_config.py  mcp_research_server.py  models.py  monitor.py  orchestrator.py  phases.py  pipeline.py  plan_parser.py  prompts.py  runtime.py  session_events.py  sessions.py  state.py  tmux.py
docs/: completing-phase.md  configuration.md  file-protocol.md  getting-started.md  handoff-contracts.md  monitor.md  prompts.md  research-dispatch.md  roadmap.md  session-resumption.md  tmux-layout.md
requirements/: 00_open_points.md  01_monitoring_tweak.md  01_product_manager_agent.md  01_tweak_monitor.md
src/: config.py  github.py  handlers.py  models.py  monitor.py  phases.py  plan_parser.py  prompts.py  providers.py  runtime.py  state.py  tmux.py  transitions.py
tests/: test_agentmux_dev_wrapper.py  test_ci_workflow_requirements.py  test_cli_tab_completion.py  test_code_researcher_requirements.py  test_completion_commit_flow.py  test_completion_data.py  test_config_merge.py  test_config_schema.py  test_configuration_resolve.py  test_configure_requirements.py  test_create_branch.py  test_debug_logging.py  test_designer_requirements.py  test_monitor.py  (+53 more)
(+275 files in other folders)
