[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmux"
version = "0.1.0"
description = "Tmux-based multi-agent orchestration system"
requires-python = ">=3.10"
dependencies = [
  "watchdog>=6.0.0",
  "PyYAML>=6.0.0",
  "questionary>=2.0.0",
  "rich>=13.0.0",
  "mcp>=1.0.0",
  "shtab>=1.6.0",
]

[project.scripts]
agentmux = "agentmux.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentmux*"]

[tool.setuptools.package-data]
agentmux = ["prompts/**/*.md", "configuration/defaults/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
exclude = [".agentmux/.sessions"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = false

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.9.0"]
